doc-index-updater/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: doc-index-updater
          image: mhraproductsnonprodregistry.azurecr.io/products/doc-index-updater
