doc-index-updater/overlays/dev/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  selector:
    matchLabels:
      app: doc-index-updater
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - "/pars"
              - "/pars/*"
      from:
        when:
          - key: request.auth.claims[groups]
            values: ["id_of_the_medical_writers_group"]
